0029934: Visualization - handle properly orthogonal clipping plane within SelectMgr_RectangularFrustum::computeClippingRange()

SelectMgr_RectangularFrustum now considers the direction of clipping plane orthogonal to picking ray.